--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
@@ -49,7 +49,11 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="colorButton" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="resetAllButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="resetAllButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="presetsButton" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
@@ -80,7 +84,10 @@
                   <Component id="fontLabel" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="resetAllButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="resetAllButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="presetsButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -208,6 +215,22 @@
           <ResourceString bundle="org/mongkie/ui/visualization/options/Bundle.properties" key="EdgeSettingPanel.hideLabelCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="presetsButton">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/org/mongkie/ui/visualization/resources/preset.png"/>
+        </Property>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/mongkie/ui/visualization/options/Bundle.properties" key="EdgeSettingPanel.presetsButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+        <Property name="focusPainted" type="boolean" value="false"/>
+        <Property name="focusable" type="boolean" value="false"/>
+        <Property name="iconTextGap" type="int" value="0"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="presetsButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
