--- a/DataTableUI/src/org/mongkie/ui/datatable/graph/FilterToolsPanel.form
+++ b/DataTableUI/src/org/mongkie/ui/datatable/graph/FilterToolsPanel.form
@@ -28,9 +28,9 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="filterLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-              <Component id="filterInputTextField" min="-2" pref="132" max="-2" attributes="0"/>
+              <Component id="filterInputTextField" min="-2" pref="145" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="filterColumnComboBox" min="-2" pref="125" max="-2" attributes="0"/>
+              <Component id="filterColumnComboBox" min="-2" pref="115" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -61,14 +61,17 @@
           <Font name="Tahoma" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/mongkie/ui/datatable/graph/Bundle.properties" key="FilterToolsPanel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+          <ResourceString bundle="org/mongkie/ui/datatable/graph/Bundle.properties" key="FilterToolsPanel.filterInputTextField.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
         <Property name="enabled" type="boolean" value="false"/>
-        <Property name="name" type="java.lang.String" value="" noResource="true"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[100, 24]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JXSearchField();"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="((JXSearchField) filterInputTextField).setLayoutStyle(JXSearchField.LayoutStyle.VISTA);&#xa;((JXSearchField) filterInputTextField).setUseNativeSearchFieldIfPossible(false);&#xa;((JXSearchField) filterInputTextField).setPromptBackround(java.awt.Color.white);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JComboBox" name="filterColumnComboBox">
       <Properties>
