--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/InstantSearchPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/InstantSearchPanel.form
@@ -38,10 +38,8 @@
           <ResourceString bundle="org/mongkie/ui/visualization/options/Bundle.properties" key="InstantSearchPanel.jXSearchField.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;, {arguments})"/>
         </Property>
         <Property name="useNativeSearchFieldIfPossible" type="boolean" value="false"/>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-          <FontInfo relative="true">
-            <Font component="jXSearchField" property="font" relativeSize="true" size="-1"/>
-          </FontInfo>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="12" style="0"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[240, 24]"/>
