--- a/DataTableUI/src/org/mongkie/ui/datatable/graph/FilterToolsPanel.form
+++ b/DataTableUI/src/org/mongkie/ui/datatable/graph/FilterToolsPanel.form
@@ -47,6 +47,9 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="filterLabel">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="12" style="0"/>
+        </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/mongkie/ui/datatable/resources/funnel.png"/>
         </Property>
